Time: 147 ms (1.07%), Space: 42.2 MB (77.52%) - LeetHub